      it no longer downloads all of the file contents that would be cloned.
    * /etc/conary/mirrors/gnu has been added to enable mirror://
      references to the GNU mirror system.
    * /etc/conary/mirrors/cpan has been added to enable mirror:// references to
    * the Comprehensive Perl Archive network mirror system.
    * Paths moving between troves as part of a single job are now treated
      as file updates instead of separate add/remove events (CNY-750,
      CNY-786, CNY-359)

  o Optimizations
    On a test system, "conary updateall --info" is around 24% faster
    than previous versions of Conary.

    * The SQL query used to retrieve troves from the local database
      has been optimized.  The new code is nearly four times faster
      for operations like "conary q group-dist --info".
    * The SQL query in getTroveContainers() used to determine the
      parent package(s) and groups(s) of a set of troves as recorded
      in the local database has been optimized.  The new code is
      almost 95 times faster. (0.2 seconds versus 19 seconds)
    * The code in getCompleteTroveSet() that creates Version and
      Flavor objects from entries in the database now caches the
      created object.  This is approximately a 4.5 times speed
      up. (2.10 seconds versus 9.4 seconds)
    * The code in iterUpdateContainerInfo has had similar version
      and flavor caching optimizations that make the code about 
      2.5 times faster (from 10 seconds to 4 seconds).

  o Bug Fixes:
    * "conary rq" (with no arguments) no longer hides troves if the
      flavor that matches the system flavor is not built for the
      latest version. (CNY-784)
    * "cvc cook" now displays the correct label of the thing its
      building, even when it is not the build label.
    * Calling "cvc update" on a new package will fail with an
      appropriate error message instead of displaying a
      traceback. (CNY-715)