@@ -429,7 +429,8 @@ class Database(SqlDbRepository):
 
         return resultDict
 
-    def depCheck(self, jobSet, troveSource, findOrdering = False):
+    def depCheck(self, jobSet, troveSource, findOrdering = False,
+                 linkedJobs = None):
         """
         Check the database for closure against the operations in
         the passed changeSet.
@@ -451,7 +452,8 @@ class Database(SqlDbRepository):
         checker = self.dependencyChecker(troveSource)
         checker.addJobs(jobSet)
         unsatisfiedList, unresolveableList, changeSetList = \
-                checker.check(findOrdering = findOrdering)
+                checker.check(findOrdering = findOrdering,
+                              linkedJobs = linkedJobs)
         checker.done()
 
         return (unsatisfiedList, unresolveableList, changeSetList)
@@ -989,6 +991,9 @@ class Database(SqlDbRepository):
                 (reposCs, localCs) = rb.getLast()
 
             self.removeRollback(name)
+
+    def getPathHashesForTroveList(self, troveList):
+        return self.db.getPathHashesForTroveList(troveList)
 
     def iterFindPathReferences(self, path, justPresent = False):
         return self.db.iterFindPathReferences(path, justPresent = justPresent)
